// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifGrid component functions should do a Match with the snapshot 1`] = `
<Fragment>
  <h3>
     
    Son Goku
     
  </h3>
  <p>
     Cargando datos...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Testing GifGrid component functions should show items when images are loaded with our useFetch 1`] = `
<Fragment>
  <h3>
     
    Son Goku
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={2}
      key="2"
      title="Shakyamuni"
      url="https://silencetimer.com"
    />
    <GifGridItem
      id={3}
      key="3"
      title="Amitaba"
      url="https://silencetimer.com"
    />
  </div>
</Fragment>
`;
